Trying to change portfolio.css to avoid white space to the right of images collection

--- a/css/app.css
+++ b/css/app.css
@@ -89,7 +89,8 @@ body {
   position: relative;
   text-align: center;
   height: 61em;
-  width: 101.6em; }
+  width: 100%;
+  overflow-x: hidden; }
   #portfolio .work-data {
     padding-top: 70px; }
     #portfolio .work-data h3 {
