--- a/css/src/portfolio.scss
+++ b/css/src/portfolio.scss
@@ -2,7 +2,8 @@
   position: relative;
   text-align: center;
   height: 61em; //330px;
-  width: 101.6em;
+  width: 100%; //101.6em;
+  overflow-x: hidden;
   //border-bottom: thick solid red;
 
 
@@ -52,7 +53,6 @@
   }
 
   .images-row {
-
     div {
       padding: 0;
     }
